# python-project-50

./: .gitignore  Makefile  README.md  gendiff_yaml  nested.json  nested_json  plain  pyproject.toml  run_gendiff
.github/workflows/: pyci-check.yml  pyci.yml
gendiff/: cli.py  diff.py  diff_generator.py  format_selector.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  run_gendiff.py
tests/: test_cli.py  test_gendiff.py  test_run_gendiff.py
tests/fixtures/: file1.yaml
